tests/reject/bad_array_ref.ul
void main() {
  int[2] x;
  string s;

  s = x[2.3];
}
